--- a/UniversalJupiter/UniversalJupiter.Shared/HomePage.xaml
+++ b/UniversalJupiter/UniversalJupiter.Shared/HomePage.xaml
@@ -13,6 +13,7 @@
             <Button Content="Capture Resume" x:Name="BtnGotoPhoto" HorizontalAlignment="Center" Click="BtnGotoPhoto_Click" />
             <Button Content="Record Interview" x:Name="BtnGotoVideo" HorizontalAlignment="Center" Click="BtnGotoVideo_Click" />
         </StackPanel>
-        <TextBox x:Name="lastName" HorizontalAlignment="Left" Margin="78,49,0,0" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Top" RenderTransformOrigin="-4.658,-1.575" Width="367" TextChanged="lastName_TextChanged"/>
+        <TextBox x:Name="lastName" HorizontalAlignment="Left" Margin="74,120,0,0" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Top" Width="367" />
+        <TextBox x:Name="firstName" HorizontalAlignment="Left" Margin="74,66,0,0" TextWrapping="Wrap" Text="First Name" VerticalAlignment="Top" Width="367"/>
     </Grid>
 </Page>
